[package]
name = "ytdlprustygui"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.32.3"
rfd = "0.17.2"     # For file dialogs
dirs = "6.0.0"     # For getting user directories
arboard = "3.6.1"  # For clipboard operations
url = "2.5.8"

[profile.release]
strip = true # Automatically strip symbols from binary
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
